# rust_app

./: Cargo.toml  README.md
migrations/2023-01-30-033729_create_articles/: up.sql
src/: schema.rs
src/models/: articles.rs
