[package]
name = "rust_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-service = "2.0.2"
actix-web = "4"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
serde = "1.0.152"
serde_json = "1.0.91"
uuid = "1.2.2"
